force-app/main/default/objects/Account/fields/customfield1__c.field-meta.xml
<CustomField>
    <fullName>customfield1__c</fullName>
    <label>customfield1</label>
    <length>12</length>
    <type>Text</type>
</CustomField>