force-app/main/default/objects/Account/fields/customfield2__c.field-meta.xml
<CustomField>
    <fullName>customfield2__c</fullName>
    <label>customfield2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>