force-app/main/default/objects/Account/fields/customfield33__c.field-meta.xml
<CustomField>
    <fullName>customfield33__c</fullName>
    <label>customfield33</label>
    <length>12</length>
    <type>Text</type>
</CustomField>